--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -3,7 +3,7 @@
         <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Foreign Languages</a>
+        <a class="nav-link disabled text-uppercase text-left" role="button">Foreign Languages</a>
     </li>
     <li class="nav-item">
         <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase text-left" %>
@@ -15,7 +15,7 @@
         <a class="nav-link text-uppercase text-left" href="https://www.instagram.com/faithfulwordbaptist/" target="_blank" role="button">Instagram</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Hymns</a>
+        <a class="nav-link disabled text-uppercase text-left" role="button">Hymns</a>
     </li>
     <li class="nav-item">
         <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase text-left" %>
