sidebar link_to

--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -3,19 +3,19 @@
         <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase text-left" role="button">Foreign Languages</a>
+        <a class="nav-link disabled text-uppercase text-left">Foreign Languages</a>
     </li>
     <li class="nav-item">
         <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="https://get.google.com/albumarchive/117089279522537034856" target="_blank" role="button">Pictures</a>
+        <a class="nav-link text-uppercase text-left" href="https://get.google.com/albumarchive/117089279522537034856" target="_blank">Pictures</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="https://www.instagram.com/faithfulwordbaptist/" target="_blank" role="button">Instagram</a>
+        <a class="nav-link text-uppercase text-left" href="https://www.instagram.com/faithfulwordbaptist/" target="_blank">Instagram</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase text-left" role="button">Hymns</a>
+        <a class="nav-link disabled text-uppercase text-left">Hymns</a>
     </li>
     <li class="nav-item">
         <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase text-left" %>
@@ -27,12 +27,12 @@
         <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase text-left d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="http://www.fwbcbotswana.com" role="button">Botswana</a>
+        <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
         <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">Donate</a>
+        <a class="nav-link text-uppercase text-left" href="https://www.truebornsons.com/donate-to-fwbc/">Donate</a>
     </li>
 </ul>
