--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,38 +1,38 @@
 <ul class="nav flex-column nav-pills">
     <li class="nav-item">
-        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase " %>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase text-left">Foreign Languages</a>
+        <a class="nav-link disabled text-uppercase ">Foreign Languages</a>
     </li>
     <li class="nav-item">
-        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase " %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="https://get.google.com/albumarchive/117089279522537034856" target="_blank">Pictures</a>
+        <a class="nav-link text-uppercase " href="https://get.google.com/albumarchive/117089279522537034856" target="_blank">Pictures</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="https://www.instagram.com/faithfulwordbaptist/" target="_blank">Instagram</a>
+        <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "nav-link text-uppercase", target: "_blank" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase text-left">Hymns</a>
+        <%= link_to "Hymns", "", class: "nav-link text-uppercase disabled" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase " %>
     </li>
     <li class="nav-item">
-        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase " %>
     </li>
     <li class="nav-item">
-        <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase text-left d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
+        <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase  d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
     </li>
     <li class="nav-item">
         <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="https://www.truebornsons.com/donate-to-fwbc/">Donate</a>
+        <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "nav-link text-uppercase" %>
     </li>
 </ul>
