--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,15 +1,15 @@
 <ul class="nav flex-column nav-pills">
     <li class="nav-item">
-        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase " %>
+        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled text-uppercase ">Foreign Languages</a>
+        <%= link_to "Foreign Languages", "", class: "nav-link text-uppercase disabled"%>
     </li>
     <li class="nav-item">
-        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase " %>
+        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase " href="https://get.google.com/albumarchive/117089279522537034856" target="_blank">Pictures</a>
+        <%= link_to "Pictures", "https://get.google.com/albumarchive/117089279522537034856", class: "nav-link text-uppercase", target: "_blank" %>
     </li>
     <li class="nav-item">
         <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "nav-link text-uppercase", target: "_blank" %>
@@ -18,10 +18,10 @@
         <%= link_to "Hymns", "", class: "nav-link text-uppercase disabled" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase " %>
+        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase " %>
+        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
         <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase  d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
