--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -27,12 +27,12 @@
         <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase  d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
     </li>
     <li class="nav-item">
-        <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "nav-link text-uppercase" target: "_blank" %>
+        <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "nav-link text-uppercase", target: "_blank" %>
     </li>
     <li class="nav-item">
         <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "nav-link text-uppercase" target: "_blank" %>
+        <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "nav-link text-uppercase", target: "_blank" %>
     </li>
 </ul>
