--- a/app/views/pages/ourpastor.html.erb
+++ b/app/views/pages/ourpastor.html.erb
@@ -13,7 +13,7 @@
               <p>
                 Pastor Anderson started Faithful Word Baptist Church on December 25, 2005. He holds no college degree but has well over 140 chapters of the Bible memorized word-for-word, including approximately half of the New Testament. Today, most Baptist churches are started by Bible colleges. However, the Bible makes it clear that the church is the pillar and ground of the truth, not a school. Faithful Word Baptist Church is a totally independent Baptist church, and Pastor Anderson was sent out by an independent Baptist church in Northern California to start it the old-fashioned way by knocking doors and winning souls to Christ.
               </p>
-              <a href="http://stevenandersonfamily.blogspot.com/">Click here for Pastor Anderson's Wife's Blog!</a>
+              <%= link_to "Click here for Pastor Anderson's Wifes's Blog!", "http://stevenandersonfamily.blogspot.com/", target: "_blank" %>
             </div>
           </div>
           <div class="row">
@@ -42,7 +42,7 @@
               <p>
                 Faithful Word Baptist Church will be paying Bro Kirchway's salary until such a time as the church in Malawi is able to become independent. In addition, we will be raising money online through online donations in order to pay his wages and provide supplies such as Bibles, New Testaments, church invitations, song books, preaching CDs, DVDs, etc. Before Bro Kirchway was saved, he was involved in the charismatic movement, which unfortunately is very popular in Malawi. He has also lived a very austere life for the last 8 years, so in many ways he is well suited for the task that God has for him in Malawi.
               </p>
-              <a href="malawi.html">Click here to donate to Bro. Kirchway's Ministry in Malawi</a>
+              <%= link_to "Click here to donate to Bro. Kirchway's Ministry in Malawi", malawi_path %>
             </div>
           </div>
 
