--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -2951,7 +2951,8 @@ fieldset[disabled] a.btn {
 .btn-outline-primary:hover {
   color: #0275d8;
   background-color: white;
-  border-color: white;
+  border: 0px;
+  /*border-color: white;*/
   /*box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);*/
 }
 
