--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <%= csrf_meta_tags %>
     <title><%= full_title(yield(:title)) %></title>
+    <%= render 'application/favicon' %>
     <%= stylesheet_link_tag 'application' %>
   </head>
 
