--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -3,7 +3,7 @@
         <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Foreign Languages", class: "nav-link text-uppercase disabled" %>
+        <%= link_to "Foreign Languages", "", class: "nav-link text-uppercase disabled" %>
     </li>
     <li class="nav-item">
         <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase" %>
@@ -15,7 +15,7 @@
         <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "nav-link text-uppercase", target: "_blank" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Hymns", class: "nav-link text-uppercase disabled" %>
+        <%= link_to "Hymns", "", class: "nav-link text-uppercase disabled" %>
     </li>
     <li class="nav-item">
         <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase" %>
