--- a/app/views/pages/doctrinalstatement.html.erb
+++ b/app/views/pages/doctrinalstatement.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Doctrinal Statement") %>
+<% active = "active" %>
 <%= render "shared/banner" %>
 <div class="container">
     <div class="row">
