--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag 'application' %>
   </head>
   <body>
+    <%= render 'layouts/navigation' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
   </body>
