--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= yield %>
+    <%= render 'footer' %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
