fixed footer error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= yield %>
-    <%= render 'footer' %>
+    <%= render 'layouts/footer' %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
