--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag 'application' %>
   </head>
   <body>
+    <% current_uri = request.env['PATH_INFO'] %>
+    <%= current_uri %>
     <%= render 'layouts/navigation' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
