--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -24,7 +24,7 @@
         <%= link_to "Radio", radio_path, class: "nav-link text-uppercase #{active("/radio")}" %>
     </li>
     <li class="nav-item">
-        <%= link_to audiobible_path, class: "nav-link text-uppercase  d-inline-block #{active("/audiobible")}" do %>
+        <%= link_to audiobible_path, class: "nav-link text-uppercase #{active("/audiobible")}" do %>
              Audio Bible <span class="badge badge-warning d-inline-block">NEW</span>
         <% end %>
     </li>
