--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar navbar-toggleable-xl navbar-light">
+  <nav class="navbar navbar-toggleable-xl navbar-light mt-2">
     <%= link_to root_path, class: "shadow navbar-brand mr-auto" do %>
       <%= image_tag "FWBC-LOGO-OFFICIAL.svg", height: '61',class: "d-inline-block align-top", alt: "Faithful Word Baptist Church" %>
     <% end %>
